created dynamic page title component and remove uneeded HTML

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <nav class="navbar navbar-dark navbar-expand-lg  bg-dark">
-    <a class="navbar-brand" href="#"><img width="150px" src="./assets/logo.png"> - BLOCKCHAIN</a>
+    <a class="navbar-brand" href="/"><img width="150px" src="./assets/logo.png"> - BLOCKCHAIN</a>
       <ul class="navbar-nav ml-4">
         <li class="nav-item" >
           <a class="nav-link" [routerLinkActiveOptions]="{exact: true}" routerLink="/" routerLinkActive="active">Home</a>
