--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
-<header>
-  <nav class="navbar navbar-dark navbar-expand-lg  bg-dark">
+<header class="navbar navbar-dark navbar-expand-lg  bg-dark">
+  <nav class="container">
     <a class="navbar-brand" href="/"><img width="150px" src="./assets/logo.png"> - BLOCKCHAIN</a>
-      <ul class="navbar-nav ml-4">
+      <ul class="navbar-nav">
         <li class="nav-item" >
           <a class="nav-link" [routerLinkActiveOptions]="{exact: true}" routerLink="/" routerLinkActive="active">Home</a>
         </li>
