--- a/src/app/components/page-title/page-title.component.html
+++ b/src/app/components/page-title/page-title.component.html
@@ -1,1 +1,7 @@
-<h1>{{title}}</h1>
+<div class="container mt-3 mb-3">
+    <div class="row">
+        <div class="col-sm-12">
+            <h1 class="d-inline">{{title}}</h1> - <small>{{subTitle}}</small>
+        </div>
+    </div>
+</div>
