--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,3 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@progress/kendo-theme-bootstrap/scss/all";
 @import "~bootstrap/scss/bootstrap";
