--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'variables';
 @import "~@progress/kendo-theme-bootstrap/scss/all";
 @import "~bootstrap/scss/bootstrap";
+
+body {
+    background: $main-background;
+}
