--- a/src/app/components/grid-all-coins/grid-all-coins.component.html
+++ b/src/app/components/grid-all-coins/grid-all-coins.component.html
@@ -1,4 +1,4 @@
-<div class="col-sm-12">
+
 <span  *ngIf="!gridView" class="k-icon k-i-loading text-center text-white bg-dark" style="height: 1000px; width: 1000px; font-size: 100px;"></span>
 <kendo-grid 
     *ngIf="gridView"
@@ -8,19 +8,39 @@
     [scrollable]="'virtual'"
     [rowHeight]="35"
     [height]="1000"
-    [resizable]="true"
     (pageChange)="pageChange($event)"
     (sortChange)="sortChange($event)"
-    [sortable]="{ allowUnsort: allowUnsort, mode: 'single'}"
+    [sortable]="{ allowUnsort: 'allowUnsort', mode: 'single'}"
     [sort]="sort"
     [navigable]="true"
-    [selectable]="true"
-    >
-    <kendo-grid-column [headerClass]="bg-dark" field="short" title="Name" [width]="10">
+    [selectable]="true" >
+    <kendo-grid-column field="short" title="Name" [width]="10">
+        <ng-template kendoGridCellTemplate let-coinItem let-rowIndex="rowIndex">
+            {{coinItem.short}}
+            <small class="text-primary d-block">{{coinItem.long}}</small>
+        </ng-template>  
     </kendo-grid-column>
     <kendo-grid-column field="price" title="Price" [width]="10">
+        <ng-template kendoGridCellTemplate let-coinItem let-rowIndex="rowIndex">
+            {{coinItem.price | currency: 'USD': 'true': '1.2-5' }}   
+        </ng-template>  
     </kendo-grid-column>
-    <kendo-grid-column field="mktcap" title="Market Cap" [width]="70">
+    <kendo-grid-column field="mktcap" title="Market Cap" [width]="15">
+        <ng-template kendoGridCellTemplate let-coinItem let-rowIndex="rowIndex">
+            {{coinItem.mktcap | currency: 'USD': 'true': '1.0-0'}}    
+        </ng-template>
+    </kendo-grid-column>
+    <kendo-grid-column field="supply" title="Available Supply" [width]="55">
+        <ng-template kendoGridCellTemplate let-coinItem let-rowIndex="rowIndex">
+            {{coinItem.supply | number}}    
+        </ng-template>
+    </kendo-grid-column>
+    <kendo-grid-column field="perc" title="24h %" [width]="10">
+        <ng-template kendoGridCellTemplate let-coinItem>
+        <span class="whole-cell" [style.color]="percentStatus(coinItem.perc)">
+           {{coinItem.perc}} %    
+        </span> 
+        </ng-template>
     </kendo-grid-column>
 </kendo-grid>
-</div>
+
