improve grid all coins component

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 @import 'variables';
 @import "~@progress/kendo-theme-bootstrap/scss/all";
 @import "~bootstrap/scss/bootstrap";
+@import "icons";
 
 body {
     background: $main-background;
