--- a/src/app/components/grid-all-coins/grid-all-coins.component.html
+++ b/src/app/components/grid-all-coins/grid-all-coins.component.html
@@ -1,4 +1,3 @@
-
 <span  *ngIf="!gridView" class="k-icon k-i-loading text-center text-white bg-dark" style="height: 1000px; width: 1000px; font-size: 100px;"></span>
 <kendo-grid 
     *ngIf="gridView"
@@ -19,18 +18,25 @@
               {{rowIndex + 1}}
          </ng-template>  
     </kendo-grid-column>
-    <kendo-grid-column field="short" title="Name" [width]="10">
+    <kendo-grid-column field="short" title="Name" [width]="23">
         <ng-template kendoGridCellTemplate let-coinItem>
-            {{coinItem.short}}
-            <small class="text-primary d-block">{{coinItem.long}}</small>
+            <span class="sprite sprite-{{coinItem.long | lowercase | trim }} small_coin_logo mr-1"></span>
+            {{coinItem.short}}<small class="text-primary ml-2">{{coinItem.long}}</small>
         </ng-template>  
     </kendo-grid-column>
-    <kendo-grid-column field="price" title="Price" [width]="10">
+    <kendo-grid-column field="perc" title="24h %" [width]="10">
+            <ng-template kendoGridCellTemplate let-coinItem>
+            <span class="whole-cell" [style.color]="percentStatus(coinItem.perc)">
+               {{coinItem.perc}} %    
+            </span> 
+            </ng-template>
+        </kendo-grid-column>
+    <kendo-grid-column field="price" title="Price" [width]="12">
         <ng-template kendoGridCellTemplate let-coinItem>
             {{coinItem.price | currency: 'USD': 'true': '1.2-5' }}   
         </ng-template>  
     </kendo-grid-column>
-    <kendo-grid-column field="mktcap" title="Market Cap" [width]="15">
+    <kendo-grid-column field="mktcap" title="Market Cap" [width]="18">
         <ng-template kendoGridCellTemplate let-coinItem>
             {{coinItem.mktcap | currency: 'USD': 'true': '1.0-0'}}    
         </ng-template>
@@ -38,13 +44,6 @@
     <kendo-grid-column field="supply" title="Available Supply" [width]="55">
         <ng-template kendoGridCellTemplate let-coinItem>
             {{coinItem.supply | number}}    
-        </ng-template>
-    </kendo-grid-column>
-    <kendo-grid-column field="perc" title="24h %" [width]="10">
-        <ng-template kendoGridCellTemplate let-coinItem>
-        <span class="whole-cell" [style.color]="percentStatus(coinItem.perc)">
-           {{coinItem.perc}} %    
-        </span> 
         </ng-template>
     </kendo-grid-column>
 </kendo-grid>
