added more improvements to grid all coins components and remove uneeded stuff

--- a/src/app/components/grid-all-coins/grid-all-coins.component.html
+++ b/src/app/components/grid-all-coins/grid-all-coins.component.html
@@ -1,47 +1,49 @@
-<span  *ngIf="!gridView" class="k-icon k-i-loading text-center text-white bg-dark" style="height: 1000px; width: 1000px; font-size: 100px;"></span>
-<kendo-grid 
+<span  *ngIf="!gridView" class="k-icon k-i-loading text-center text-white bg-dark" style="height: 1000px; width: 1140px; font-size: 100px;"></span>
+<kendo-grid
     *ngIf="gridView"
     [data]="gridView"
-    [skip]="skip"
-    [pageSize]="pageSize"
     [scrollable]="'virtual'"
     [rowHeight]="35"
     [height]="1000"
+    [pageSize]="gridState.take" 
+    [skip]="gridState.skip" 
+    [sort]="gridState.sort"
+    (dataStateChange)="onStateChange($event)"
     (pageChange)="pageChange($event)"
     (sortChange)="sortChange($event)"
     [sortable]="{ allowUnsort: 'allowUnsort', mode: 'single'}"
-    [sort]="sort"
     [navigable]="true"
+    [resizable]="true"
     [selectable]="true" >
-    <kendo-grid-column title="#" [width]="6">
+    <kendo-grid-column title="#" [width]="60">
          <ng-template kendoGridCellTemplate let-rowIndex="rowIndex">
               {{rowIndex + 1}}
          </ng-template>  
     </kendo-grid-column>
-    <kendo-grid-column field="short" title="Name" [width]="23">
+    <kendo-grid-column field="short" title="Name" [width]="200">
         <ng-template kendoGridCellTemplate let-coinItem>
             <span class="sprite sprite-{{coinItem.long | lowercase | trim }} small_coin_logo mr-1"></span>
             {{coinItem.short}}<small class="text-primary ml-2">{{coinItem.long}}</small>
         </ng-template>  
     </kendo-grid-column>
-    <kendo-grid-column field="perc" title="24h %" [width]="10">
+    <kendo-grid-column field="perc" title="24h %" [width]="105">
             <ng-template kendoGridCellTemplate let-coinItem>
             <span class="whole-cell" [style.color]="percentStatus(coinItem.perc)">
                {{coinItem.perc}} %    
             </span> 
             </ng-template>
         </kendo-grid-column>
-    <kendo-grid-column field="price" title="Price" [width]="12">
+    <kendo-grid-column field="price" title="Price" [width]="110">
         <ng-template kendoGridCellTemplate let-coinItem>
             {{coinItem.price | currency: 'USD': 'true': '1.2-5' }}   
         </ng-template>  
     </kendo-grid-column>
-    <kendo-grid-column field="mktcap" title="Market Cap" [width]="18">
+    <kendo-grid-column field="mktcap" title="Market Cap" [width]="160">
         <ng-template kendoGridCellTemplate let-coinItem>
             {{coinItem.mktcap | currency: 'USD': 'true': '1.0-0'}}    
         </ng-template>
     </kendo-grid-column>
-    <kendo-grid-column field="supply" title="Available Supply" [width]="55">
+    <kendo-grid-column field="supply" title="Available Supply">
         <ng-template kendoGridCellTemplate let-coinItem>
             {{coinItem.supply | number}}    
         </ng-template>
