change currency filter to reflect angular 6

--- a/src/app/components/grid-all-coins/grid-all-coins.component.html
+++ b/src/app/components/grid-all-coins/grid-all-coins.component.html
@@ -1,12 +1,12 @@
-<div  *ngIf="!gridView" class="k-icon k-i-loading text-center text-white bg-dark" style="height: 1000px; width: 1140px; font-size: 100px;"></div>
+<div *ngIf="!gridView" class="k-icon k-i-loading text-center text-white bg-dark" style="height: 1000px; width: 1140px; font-size: 100px;"></div>
 <kendo-grid
     *ngIf="gridView"
     [data]="gridView"
     [scrollable]="'virtual'"
     [rowHeight]="35"
     [height]="1000"
-    [pageSize]="gridState.take" 
-    [skip]="gridState.skip" 
+    [pageSize]="gridState.take"
+    [skip]="gridState.skip"
     [sort]="gridState.sort"
     (dataStateChange)="onStateChange($event)"
     (pageChange)="pageChange($event)"
@@ -14,46 +14,46 @@
     [sortable]="{ allowUnsort: 'allowUnsort', mode: 'single'}"
     [navigable]="true"
     [resizable]="true"
-    [selectable]="true" >
+    [selectable]="true">
     <kendo-grid-column title="#" [width]="60">
-         <ng-template kendoGridCellTemplate let-rowIndex="rowIndex">
-              {{rowIndex + 1}}
-         </ng-template>  
+        <ng-template kendoGridCellTemplate let-rowIndex="rowIndex">
+            {{rowIndex + 1}}
+        </ng-template>
     </kendo-grid-column>
     <kendo-grid-column field="short" title="Name" [width]="200">
         <ng-template kendoGridCellTemplate let-coinItem>
             <span class="sprite sprite-{{coinItem.long | lowercase | trim }} small_coin_logo mr-1"></span>
-            {{coinItem.short}}<small class="text-primary ml-2">{{coinItem.long}}</small>
-        </ng-template>  
+            {{coinItem.short}}
+            <small class="text-primary ml-2">{{coinItem.long}}</small>
+        </ng-template>
     </kendo-grid-column>
     <kendo-grid-column field="perc" title="24h %" [width]="108">
         <ng-template kendoGridCellTemplate let-coinItem>
             <span class="whole-cell" [style.color]="percentStatus(coinItem.perc)">
-               <strong>{{coinItem.perc}} %</strong>    
+                <strong>{{coinItem.perc}} %</strong>
             </span>
-            </ng-template>
-        </kendo-grid-column>
+        </ng-template>
+    </kendo-grid-column>
     <kendo-grid-column field="price" title="Price" [width]="110">
         <ng-template kendoGridCellTemplate let-coinItem>
-        <span class="whole-cell" [style.color]="percentStatus(coinItem.perc)">
-            {{coinItem.price | currency: 'USD': 'true': '1.2-5' }} 
-            </span>  
-        </ng-template>  
+            <span class="whole-cell" [style.color]="percentStatus(coinItem.perc)">
+                {{coinItem.price | currency: 'USD': 'symbol': '1.2-5' }}
+            </span>
+        </ng-template>
     </kendo-grid-column>
     <kendo-grid-column field="mktcap" title="Market Cap" [width]="160">
         <ng-template kendoGridCellTemplate let-coinItem>
-            {{coinItem.mktcap | currency: 'USD': 'true': '1.0-0'}}    
+            {{coinItem.mktcap | currency: 'USD': 'symbol': '1.0-0'}}
         </ng-template>
     </kendo-grid-column>
     <kendo-grid-column field="supply" title="Available Supply" [width]="160">
         <ng-template kendoGridCellTemplate let-coinItem>
-            {{coinItem.supply | number}}    
+            {{coinItem.supply | number}}
         </ng-template>
     </kendo-grid-column>
     <kendo-grid-column field="usdVolume" title="24 Hour Volume">
-            <ng-template kendoGridCellTemplate let-coinItem>
-                {{coinItem.usdVolume | number}}    
-            </ng-template>
-        </kendo-grid-column>
+        <ng-template kendoGridCellTemplate let-coinItem>
+            {{coinItem.usdVolume | number}}
+        </ng-template>
+    </kendo-grid-column>
 </kendo-grid>
-
